--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -1,3 +1,4 @@
+{% load utils %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -35,13 +36,13 @@
                           <li>Replies</li>
                           <li><a href="{% url 'inbox' %}">Messages</a></li>
                           <li><a href="{% url 'account' %}">{{ request.user }}</a></li>
-                          <li><a href="{% url 'logout' %}?next={{request.get_full_path|urlencode}}">logout</a></li>
+                          <li><a href="{% url_with_next 'logout' request %}">logout</a></li>
                         </ul>
                     </nav>
                     {% else %}
                     <nav class="user">
                       <ul>
-                        <li><a href="{% url 'login' %}?next={{request.get_full_path|urlencode}}">Login</a></li>
+                        <li><a href="{% url_with_next 'login' request %}">Login</a></li>
                         <li><details id="signup-details" title="You will need an invitation from an existing user to join."><summary><a href="">Sign up</a></summary></details></li>
                       </ul>
                     </nav>
