--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -358,7 +358,7 @@ template {
 
 html, body {
   font-family: sans;
-  font-size: 14px;
+  font-size: 12px;
   width: 100%;
   height: 100%;
 }
@@ -597,7 +597,8 @@ div#avatar-thumbnail {
 }
 
 .avatar-small {
-  height: 2ex;
+  height: 1.5rem;
+  width: 1.5rem;
   border-radius: 50%;
   display: inline-block;
   margin-bottom: -5px;
@@ -606,6 +607,8 @@ div#avatar-thumbnail {
   margin: 0;
   margin-right: 5px;
   margin-left: 5px;
+  object-fit: cover;
+  object-position: center;
 }
 
 a.feed, a.feed:visited {
