--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -431,6 +431,7 @@ main>ul.posts>li.story .votes{
 main>ul.posts>li.story .title{
   grid-area: title;
   display: flex;
+  gap: 4px;
 }
 main>ul.posts>li.story .links{
   grid-area: links;
@@ -707,6 +708,11 @@ ul.tags {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-flow: wrap;
+  row-gap: 4px;
+  column-gap: 3px;
+  height: max-content;
 }
 
 ul.tags>li {
@@ -715,7 +721,6 @@ ul.tags>li {
   border-radius: 5px;
   color: #555;
   font-size: 8pt;
-  margin-left: 0.25em;
   padding: 0px 0.4em 1px 0.4em;
   text-decoration: none;
   vertical-align: middle;
@@ -724,6 +729,7 @@ ul.tags>li {
   --aa-color: calc((var(--aa-brightness) - 128) * -1000);
   background: rgb(var(--red), var(--green), var(--blue));
   color: rgb(var(--aa-color), var(--aa-color), var(--aa-color));
+  min-width: max-content;
 }
 
 ul.posts li {
