--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -29,7 +29,7 @@
                           <li>Search</li>
                         </ul>
                     </nav>
-                    <div style="width: 100%;"></div>
+                    <div style="width: 100%;flex-grow:1;flex-basis:content;"></div>
                     {% if request.user.is_authenticated %}
                     <nav class="user">
                         <ul>
