--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -64,7 +64,7 @@
                 <nav class="menu">
                     <ul>
                         <li>Moderation Log</li>
-                        <li>About</li>
+                        <li><a href="{% url 'about' %}">About</a></li>
                     </ul>
                 </nav>
                 <nav class="feeds">
