--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -1,4 +1,5 @@
 {% load utils %}
+{% load cache %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -65,6 +66,7 @@
                     <ul>
                         <li>Moderation Log</li>
                         <li><a href="{% url 'about' %}">About</a></li>
+                        <li>{% cache 99999 build_sha %}{% build_sha %}{% endcache %}</li>
                     </ul>
                 </nav>
                 <nav class="feeds">
