--- a/sic/templates/profile_posts.html
+++ b/sic/templates/profile_posts.html
@@ -5,30 +5,11 @@
 {% block content %}
     <ul class="posts">
         {% for post in posts %}
-                {% if post.is_story %}
-            <li class="story">
-                    {% spaceless %}
-                        <div class="votes">
-                            <div class="upvote{% if post.upvoted %} upvoted{% endif %}">
-                                {% if request.user.is_authenticated %}
-                                    <form>
-                                        <input type="submit" formaction="{% url_with_next 'upvote_story' post.pk request %}" formmethod="GET" value="">
-                                    </form>
-                                {% endif %}
-                            </div>
-                            <div class="score">
-                                {{post.karma}}
-                            </div>
-                        </div>
-                        <div class="title">
-                            <a href="{{post.get_listing_url}}">{{ post.title }}</a>
-                        </div>
-                        <div class="links">{% if post.user.avatar %}<img class="avatar-small" src="{{post.user.avatar}}" alt="user avatar">{% endif %}{% if post.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ post.user.get_absolute_url }}">{{ post.user }}</a> <time datetime="{{ post.created | date:"Y-m-d H:i:s" }}" title="{{ post.created }}"> {{ post.created|naturaltime }}</time> | flag | hide | save | archived copy | <a href="{{post.get_absolute_url}}">{{ post.comments.count }} comments</a></div>
-                    {% endspaceless %}
-            </li>
-                {% else %}
-                    {% include "comment.html" with comment=post reply_form=reply_form shallow=True %}
-                {% endif %}
+            {% if post.is_story %}
+                {% include "story_list_item.html" with story=post %}
+            {% else %}
+                {% include "comment.html" with comment=post reply_form=reply_form shallow=True %}
+            {% endif %}
         {% endfor %}
     </ul>
     <div class="pagination">
