--- a/sic/templates/edit_avatar.html
+++ b/sic/templates/edit_avatar.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 {% block title %}Edit avatar{% endblock %}
 {% block content %}
-<form enctype="multipart/form-data" method="post" action="">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+    <p>Current avatar:</p>
+    <figure style="width: max-content;">
+        {% if user.avatar %}<img src="{{ user.avatar }}">{% else %}<div>None.</div>{% endif %}
+        <figcaption>{{ user.avatar_title|default_if_none:"<em>No title.</em>" }}</figcaption>
+    </figure>
+    <form enctype="multipart/form-data" method="post" action="">
+        {% csrf_token %}
+        <table>
+            {{ form }}
+        </table>
+        <input type="submit" name="delete-image" value="Delete image">
+        <input type="submit" value="Submit">
+    </form>
 {% endblock %}
