--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -381,6 +381,18 @@ main {
   width: 100%;
   height: 100%;
 }
+
+main nav>ul{
+  list-style: none;
+  column-gap: 1rem;
+  display: flex;
+  justify-content: space-between;
+  flex-flow:wrap;
+  margin: 0;
+  width: max-content;
+  padding: 0;
+}
+
 body>main>hr {
   width: 100%;
 }
@@ -405,6 +417,11 @@ body>header>nav>ul {
   margin: 0;
   width: 100%;
   padding: 0;
+}
+
+body>header>nav>ul>li {
+  flex-basis: max-content;
+  flex-grow: 1;
 }
 
 body>header>nav.user {
@@ -439,6 +456,9 @@ body>footer>nav.feeds {
 body>footer>nav.feeds>ul {
   column-gap: 2px;
   justify-content: right;
+}
+body>footer>nav.feeds>ul>li {
+  white-space: nowrap;
 }
 
 main>ul.posts {
@@ -942,4 +962,8 @@ li.bookmark-annotation {
   margin-bottom: 1rem;
   width: max-content;
   height: max-content;
+}
+
+select {
+  resize: vertical;
 }
