--- a/sic/templates/account.html
+++ b/sic/templates/account.html
@@ -3,9 +3,13 @@
 {% block title %}sic{% endblock %}
 {% block content %}
     <div style="grid-row: 1/ span 1;">
-        <a href="{% url 'edit_profile' %}">edit profile</a>
-        <a href="{{ user.get_absolute_url }}">view profile</a>
-        <a href="{% url 'bookmarks' %}">bookmarks</a>
+        <nav>
+            <ul>
+                <li><a href="{% url 'edit_profile' %}">edit profile</a></li>
+                <li><a href="{{ user.get_absolute_url }}">view profile</a></li>
+                <li><a href="{% url 'bookmarks' %}">bookmarks</a></li>
+            </ul>
+        </nav>
     </div>
     <div class="profile">
         <label for="username">username:</label>
@@ -71,6 +75,11 @@
     </div>
     <div class="taggregations">
         <h2>Aggregations</h2>
+        <nav>
+            <ul>
+                <li><a href="{% url 'new_aggregation' %}">create</a></li>
+            </ul>
+        </nav>
         {% if user.created_taggregations.exists %}
             <h3>Created:</h3>
             <ul>
