--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -1,7 +1,10 @@
 {% load humanize %}
 {% load utils %}
 
-<li class="comment" id="{{comment.slugify}}">
+<li class="comment{% if not comment.replies.exists %} no-children{% endif %}" id="{{comment.slugify}}">
+  {% spaceless %}
+    <input class="comment" type="checkbox" id="comment-{{comment.pk}}" name="comment-{{comment.pk}}" >
+    <label class="comment" for="comment-{{comment.pk}}"></label>
     <span class="links"><span class="votes">
         <span class="upvote{% if comment.upvoted %} upvoted{% endif %}">
             {% if request.user.is_authenticated %}
@@ -16,8 +19,6 @@
         </span>
     </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %}
     </span>
-    <details class="comment{% if not comment.replies.exists %} no-children{% endif %}" open="open">
-        <summary>
             <span class="comment">{{ comment.text }}</span>
             {% if request.user.is_authenticated %}
                 <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}">
@@ -29,7 +30,7 @@
                     <input type="submit" value="Submit">
                 </form>
             {% endif %}
-        </summary>
+        <div class="replies">
         {% if comment.replies.exists and not shallow %}
             <ul class="posts">
                 {% for reply in comment.replies.all %}
@@ -37,5 +38,6 @@
                 {% endfor %}
             </ul>
         {% endif %}
-    </details>
+        </div>
+  {% endspaceless %}
 </li>
