--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -2,42 +2,44 @@
 {% load utils %}
 
 <li class="comment{% if not comment.replies.exists %} no-children{% endif %}" id="{{comment.slugify}}">
-  {% spaceless %}
-    <input class="comment" type="checkbox" id="comment-{{comment.pk}}" name="comment-{{comment.pk}}" >
-    <label class="comment" for="comment-{{comment.pk}}"></label>
-    <span class="links"><span class="votes">
-        <span class="upvote{% if comment.upvoted %} upvoted{% endif %}">
-            {% if request.user.is_authenticated %}
-                <form action="{% url_with_next 'upvote_comment' comment.story.pk None comment.pk request %}" method="POST">
-                    {% csrf_token %}
-                    <input type="submit" title="upvote comment" value="">
-                </form>
-            {% endif %}
+    {% spaceless %}
+        <input class="comment" type="checkbox" id="comment-{{comment.pk}}" name="comment-{{comment.pk}}" >
+        <label class="comment" for="comment-{{comment.pk}}"></label>
+        <span class="links"><span class="votes">
+            <span class="upvote{% if comment.upvoted %} upvoted{% endif %}">
+                {% if request.user.is_authenticated %}
+                    <form action="{% url_with_next 'upvote_comment' comment.story.pk None comment.pk request %}" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" title="upvote comment" value="">
+                    </form>
+                {% endif %}
+            </span>
+            <span class="score">
+                {{comment.karma}}
+            </span>
+        </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %} | <label class="toggle-source" for="comment-source-{{comment.pk}}"><a href="">toggle show source</a></label>
         </span>
-        <span class="score">
-            {{comment.karma}}
-        </span>
-    </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %}
-    </span>
-            <span class="comment">{{ comment.text }}</span>
-            {% if request.user.is_authenticated %}
-                <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}">
-                <form action="{% url 'reply' comment.pk %}" method="POST" class="reply-form">
-                    {% csrf_token %}
-                    <table>
-                        {{reply_form}}
-                    </table>
-                    <input type="submit" value="Submit">
-                </form>
-            {% endif %}
-        <div class="replies">
-        {% if comment.replies.exists and not shallow %}
-            <ul class="posts">
-                {% for reply in comment.replies.all %}
-                    {% include "comment.html" with comment=reply %}
-                {% endfor %}
-            </ul>
+        <input class="comment-source" type="checkbox" id="comment-source-{{comment.pk}}" name="comment-source-{{comment.pk}}" hidden>
+        <span class="comment">{{ comment.text_to_html }}</span>
+        <span class="comment-source">{{ comment.text }}</span>
+        {% if request.user.is_authenticated %}
+            <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}">
+            <form action="{% url 'reply' comment.pk %}" method="POST" class="reply-form">
+                {% csrf_token %}
+                <table>
+                    {{reply_form}}
+                </table>
+                <input type="submit" value="Submit">
+            </form>
         {% endif %}
+        <div class="replies">
+            {% if comment.replies.exists and not shallow %}
+                <ul class="posts">
+                    {% for reply in comment.replies.all %}
+                        {% include "comment.html" with comment=reply %}
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
-  {% endspaceless %}
+    {% endspaceless %}
 </li>
