--- a/sic/templates/story_list_item.html
+++ b/sic/templates/story_list_item.html
@@ -20,6 +20,12 @@
             <a href="{{story.get_listing_url}}" class="title">{{ story.title }}</a>
             {% with story.get_domain as domain %}{% if domain %}<span class="netloc">{{ domain }}</span>{% endif %}{% endwith %}
             {% include "story_tags.html" with tags=story.tags.all %}
+            {% if DEBUG %}
+                <details>
+                    <summary>hotness info</summary>
+                    {{ story.hotness|pprint }}
+                </details>
+            {% endif %}
         </div>
         <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar" title="{{ story.user.avatar_title|default_if_none:'' }}" height="18" width="18">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}"> {{ story.created|naturaltime }}</time> | flag | hide | {% if request.user.is_authenticated %}<a href="{% url_with_next 'save_story' story.pk request %}">{% if is_bookmarked %}unsave{% else %}save{% endif %}</a> |{% endif %} archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
     {% endspaceless %}
