--- a/sic/templates/account.html
+++ b/sic/templates/account.html
@@ -41,7 +41,7 @@
         <div class="invite_tree">
             <h2>Invitation tree</h2>
             {% for inv in user.invited.all %}
-                <p title="{{ inv.id }}">{{ inv.created }} - {{ inv.address }} - {% if inv.accepted %}<span class="accepted">accepted by <a href="{{ inv.receiver.get_absolute_url }}">{{ inv.receiver }}</a></span>{% else %}no answer yet <a href="{{ inv.get_absolute_url }}">share link</a>{% endif %}</p>
+                <p title="{{ inv.id }}">{{ inv.created }} - {{ inv.address }} - {% if inv.accepted %}<span class="accepted">accepted by <a href="{{ inv.receiver.get_absolute_url }}">{{ inv.receiver }}</a></span>{% else %}no answer yet <a href="{% url_with_next 'resend_invite' invite_pk=inv.pk request %}">resend email</a>, or <a href="{{ inv.get_absolute_url }}">share link</a>{% endif %}</p>
             {% empty %}
                 You haven't invited anyone yet.
             {% endfor %}
