Add git_repository field to User profile

--- a/sic/templates/account.html
+++ b/sic/templates/account.html
@@ -17,7 +17,7 @@
         <label for="homepage">homepage:</label>
         <div id="homepage">{{ user.homepage }}</div>
         <label for="git-repository">git repository:</label>
-        <div id="git-repository"></div>
+        <div id="git-repository">{{ user.git_repository }}</div>
         <label for="about">about:</label>
         <div id="about"></div>
         <label for="status">status:</label>
