--- a/sic/templates/profile.html
+++ b/sic/templates/profile.html
@@ -7,6 +7,8 @@
         <div id="username">{{ user.username }}</div>
         <div id="label_for_homepage">homepage:</div>
         <div id="homepage">{{ user.homepage|default_if_none:'None.' }}</div>
+        <div id="label_for_git-repository">git repository:</div>
+        <div id="git-repository">{{ user.git_repository|default_if_none:'None.' }}</div>
         <div id="label_for_about">about:</div>
         <div id="about">{{ user.about|default_if_none:'None.' }}</div>
         <div id="label_for_status">status:</div>
